fix: Adjust fixed top position for plan info and week picker to remove gap between the two.

--- a/store/src/styles/components/plan_info.scss
+++ b/store/src/styles/components/plan_info.scss
@@ -108,6 +108,6 @@
    @extend .hern-plan-info;
    position: fixed;
    width: 100%;
-   top: 94px;
+   top: 90px;
    z-index: 3;
 }
