--- a/store/src/styles/sections/select-menu.scss
+++ b/store/src/styles/sections/select-menu.scss
@@ -27,7 +27,7 @@
    z-index: 5;
    width: 100%;
    background: #fff;
-   top: 147px;
+   top: 144px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
